--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                         <li><a href="#">news</a></li>
                     </ul>
                 </div>
+                <div class="icon">
+                      <span><i class="fa-solid fa-bars"></i></span> 
+                </div>
             </nav>
         </div>
     </header>
