resturent er logo design

--- a/index.html
+++ b/index.html
@@ -1,62 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>class-15</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <nav class="nav-bar">
-                <div class="logo">
-                    <a href="#"><img src="images/ring.jpg" alt="logo"></a>
-                </div>
-                <div class="manu">
-                    <ul>
-                        <li><a href="#">home</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">service</a></li>
-                        <li><a href="#">sports</a></li>
-                        <li><a href="#">news</a></li>
-                    </ul>
-                </div>
-                <div class="icon">
-                      <span><i class="fa-solid fa-bars"></i></span> 
-                </div>
-            </nav>
-        </div>
+      <div class="container">
+        <nav class="nav-bar">
+          <div class="logo">
+            <a href="#"><img src="images/ring.jpg" alt="logo" /></a>
+          </div>
+          <div class="manu">
+            <ul>
+              <li><a href="#">home</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">service</a></li>
+              <li><a href="#">sports</a></li>
+              <li><a href="#">news</a></li>
+            </ul>
+          </div>
+          <div class="icon">
+            <span><i class="fa-solid fa-bars"></i></span>
+          </div>
+        </nav>
+      </div>
     </header>
     <!-- End to header -->
-    
 
     <div class="bannar-section">
-        <div class="bannar-content">
-            <h1>It make awesome!!</h1>
-            <a href="#">ordrr now</a>
-
-        </div>
+      <div class="bannar-content">
+        <h1>It make awesome!!</h1>
+        <a href="#">ordrr now</a>
+      </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- new -->
+    <div class="service-section">
+      <div class="containar">
+        <div class="section-title">
+          <h2>our service</h2>
+          <p>
+            Lorem ipsum dolor!
+          </p>
+        </div>
+        <div class="service-item">
+          <div class="item">
+            <img src="images/buffer.jpg" alt="buffer" />
+            <h3>buffer</h3>
+            <p>
+              ab sed ea enim, iste aut mollitia voluptates quos in numquam
+              nobis dolore?
+            </p>
+          </div>
+          <div class="item">
+            <img src="images/cataring.jpg" alt="buffer" />
+            <h3>cataring</h3>
+            <p>
+              ab sed ea enim, iste aut mollitia voluptates quos in numquam
+              nobis dolore?
+            </p>
+          </div>
+          <div class="item">
+            <img src="images/party.jpg" alt="buffer" />
+            <h3>Party</h3>
+            <p>
+              ab sed ea enim, iste aut mollitia voluptates quos in numquam
+              nobis dolore?
+            </p>
+          </div>
+           <div class="item">
+            <img src="images/delivery.jpg" alt="buffer" />
+            <h3>home delivery</h3>
+            <p>
+              ab sed ea enim, iste aut mollitia voluptates quos in numquam
+              nobis dolore?
+            </p>
+          </div>
+          
+        </div>
+      </div>
+    </div>
 
     <!-- fontaswame -->
-    <script src="https://kit.fontawesome.com/da72d6e058.js" crossorigin="anonymous"></script>
-</body>
+
+    <script
+      src="https://kit.fontawesome.com/da72d6e058.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
