--- a/index.html
+++ b/index.html
@@ -130,10 +130,14 @@
         </div>
       </div>
     </div>
-
-    </div>
+  </div>
   </div>
 </div>
+<footer>
+  <div class="container">
+    <p><i class="fa-solid fa-copyright"></i> <a href="#"> RIMOSSi </a> All RIGHT RESERVED! 2023</p>
+  </div>
+</footer>
 
 
 
