--- a/practic.html
+++ b/practic.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practic-15</title>
+    <link rel="stylesheet" href="practic.css">
 </head>
 <body>
-
+<header>
+    <div class="container">
+        <div>content</div>
+    </div>
+</header>
 
 
 
