--- a/practic.html
+++ b/practic.html
@@ -9,7 +9,11 @@
 <body>
 <header>
     <div class="container">
-        <div>content</div>
+        <div class="nav-bar">
+            <div class="logo">
+                <a href=""><img src="images/ring.jpg" alt=""></a>
+            </div>
+        </div>
     </div>
 </header>
 
