--- a/practic.html
+++ b/practic.html
@@ -11,8 +11,17 @@
     <div class="container">
         <div class="nav-bar">
             <div class="logo">
-                <a href=""><img src="images/ring.jpg" alt=""></a>
+                <img src="images/ring.jpg" alt="">
             </div>
+            <div class="manu">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Service</li>
+                    <li>Contract</li>
+                </ul>
+            </div>
+           
         </div>
     </div>
 </header>
