--- a/mobasshir.html
+++ b/mobasshir.html
@@ -13,7 +13,15 @@
                 <div class="logp">
                     <a href="#"> <img src="images/" alt=""> </a>
                 </div>
-                <div class="manu"></div>
+                <div class="manu">
+                    <ul>
+                        <li> <a href="Home"></a> </li>
+                        <li> <a href="About"></a> </li>
+                        <li> <a href="Service"></a> </li>
+                        <li> <a href="Contract"></a> </li>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
 
 
