--- a/mobasshir.html
+++ b/mobasshir.html
@@ -19,7 +19,7 @@
                         <li> <a href="About"></a> </li>
                         <li> <a href="Service"></a> </li>
                         <li> <a href="Contract"></a> </li>
-                        <li></li>
+                        <li> <a href="Blogs"></a> </li>
                     </ul>
                 </div>
             </div>
