--- a/mobasshir.html
+++ b/mobasshir.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>project</title>
-    <link rel="stylesheet" href="mobasshir.css">
-</head>
-<body>
+    <link rel="stylesheet" href="mobasshir.css" />
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <div class="top">
-                <div class="logp">
-                    <a href="#"> <img src="images/" alt=""> </a>
-                </div>
-                <div class="manu">
-                    <ul>
-
-                         <li> <a href="Home"></a> </li>
-                        <li> <a href="About"></a> </li>
-                        <li> <a href="Service"></a> </li>
-                        <li> <a href="Contract"></a> </li>
-                        <li> <a href="Blogs"></a> </li>
-                    </ul>
-                </div>
-            </div>
-
-
-
-
-
-            <div class="middle"></div>
-            <div class="bottom"></div>
+      <div class="container">
+        <div class="top">
+          <div class="logp">
+            <a href="#"> <img src="images/" alt="" /> </a>
+          </div>
+          <div class="manu">
+            <ul>
+              <li><a href="Home"></a></li>
+              <li><a href="About"></a></li>
+              <li><a href="Service"></a></li>
+              <li><a href="Contract"></a></li>
+              <li><a href="Blogs"></a></li>
+            </ul>
+          </div>
         </div>
+
+        <div class="middle"></div>
+        <div class="bottom"></div>
+      </div>
     </header>
-</body>
+  </body>
 </html>
